updated loc and icons

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -55,38 +55,35 @@
  br_basic_estate_disatisfaction_increases_loc: "disatisfaction increased with"
  br_basic_specifed_estate_disatisfaction_increase_loc: "$br_basic_estate_disatisfaction_increases_loc$ a"
  br_basic_unspecifed_estate_disatisfaction_increase_loc: "$br_basic_estate_disatisfaction_increases_loc$"
- br_hre_small_increase_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_estate_disatisfaction_value')|-=]."
- br_hre_medium_increase_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_estate_disatisfaction_value')|-=]."
- br_hre_large_increase_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_estate_disatisfaction_value')|-=]."
- br_hre_small_increase_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_estate_disatisfaction_value')|-=]."
- br_hre_medium_increase_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_estate_disatisfaction_value')|-=]."
- br_hre_large_increase_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_estate_disatisfaction_value')|-=]."
- br_hre_small_increase_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_estate_disatisfaction_value')|-=]."
- br_hre_medium_increase_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_estate_disatisfaction_value')|-=]."
- br_hre_large_increase_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_estate_disatisfaction_value')|-=]."
- br_hre_unspecified_increase_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_unspecifed_estate_disatisfaction_increase_loc$: $br_disatisfaction_change_value$."
- br_hre_unspecified_increase_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_unspecifed_estate_disatisfaction_increase_loc$: $br_disatisfaction_change_value$."
- br_hre_unspecified_increase_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_unspecifed_estate_disatisfaction_increase_loc$: $br_disatisfaction_change_value$."
+ br_hre_small_increase_in_1de_estate_disatisfaction_tt: "[br_concept_1de_estate] $br_basic_specifed_estate_disatisfaction_increase_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_estate_disatisfaction_value')|-=]."
+ br_hre_medium_increase_in_1de_estate_disatisfaction_tt: "[br_concept_1de_estate] $br_basic_specifed_estate_disatisfaction_increase_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_estate_disatisfaction_value')|-=]."
+ br_hre_large_increase_in_1de_estate_disatisfaction_tt: "[br_concept_1de_estate] $br_basic_specifed_estate_disatisfaction_increase_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_estate_disatisfaction_value')|-=]."
+ br_hre_small_increase_in_2de_estate_disatisfaction_tt: "[br_concept_2de_estate] $br_basic_specifed_estate_disatisfaction_increase_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_estate_disatisfaction_value')|-=]."
+ br_hre_medium_increase_in_2de_estate_disatisfaction_tt: "[br_concept_2de_estate] $br_basic_specifed_estate_disatisfaction_increase_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_estate_disatisfaction_value')|-=]."
+ br_hre_large_increase_in_2de_estate_disatisfaction_tt: "[br_concept_2de_estate] $br_basic_specifed_estate_disatisfaction_increase_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_estate_disatisfaction_value')|-=]."
+ br_hre_small_increase_in_3de_estate_disatisfaction_tt: "[br_concept_3de_estate] $br_basic_specifed_estate_disatisfaction_increase_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_estate_disatisfaction_value')|-=]."
+ br_hre_medium_increase_in_3de_estate_disatisfaction_tt: "[br_concept_3de_estate] $br_basic_specifed_estate_disatisfaction_increase_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_estate_disatisfaction_value')|-=]."
+ br_hre_large_increase_in_3de_estate_disatisfaction_tt: "[br_concept_3de_estate] $br_basic_specifed_estate_disatisfaction_increase_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_estate_disatisfaction_value')|-=]."
+ br_hre_unspecified_increase_in_1de_estate_disatisfaction_tt: "[br_concept_1de_estate] $br_basic_unspecifed_estate_disatisfaction_increase_loc$: $br_disatisfaction_change_value$."
+ br_hre_unspecified_increase_in_2de_estate_disatisfaction_tt: "[br_concept_2de_estate] $br_basic_unspecifed_estate_disatisfaction_increase_loc$: $br_disatisfaction_change_value$."
+ br_hre_unspecified_increase_in_3de_estate_disatisfaction_tt: "[br_concept_3de_estate] $br_basic_unspecifed_estate_disatisfaction_increase_loc$: $br_disatisfaction_change_value$."
  #estate disatisfaction decrease
  br_basic_estate_disatisfaction_decreases_loc: "disatisfaction decreased with"
  br_basic_specifed_estate_disatisfaction_decrease_loc: "$br_basic_estate_disatisfaction_decreases_loc$ a"
  br_basic_unspecifed_estate_disatisfaction_decrease_loc: "$br_basic_estate_disatisfaction_decreases_loc$"
- br_hre_small_decrease_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_decrease_in_estate_disatisfaction_value')|-=]."
- br_hre_medium_decrease_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_decrease_in_estate_disatisfaction_value')|-=]."
- br_hre_large_decrease_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_decrease_in_estate_disatisfaction_value')|-=]."
- br_hre_small_decrease_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_decrease_in_estate_disatisfaction_value')|-=]."
- br_hre_medium_decrease_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_decrease_in_estate_disatisfaction_value')|-=]."
- br_hre_large_decrease_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_decrease_in_estate_disatisfaction_value')|-=]."
- br_hre_small_decrease_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_decrease_in_estate_disatisfaction_value')|-=]."
- br_hre_medium_decrease_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_decrease_in_estate_disatisfaction_value')|-=]."
- br_hre_large_decrease_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_decrease_in_estate_disatisfaction_value')|-=]."
- br_hre_unspecified_decrease_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_unspecifed_estate_disatisfaction_decrease_loc$: $br_disatisfaction_change_value$."
- br_hre_unspecified_decrease_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_unspecifed_estate_disatisfaction_decrease_loc$: $br_disatisfaction_change_value$."
- br_hre_unspecified_decrease_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_unspecifed_estate_disatisfaction_decrease_loc$: $br_disatisfaction_change_value$."
+ br_hre_small_decrease_in_1de_estate_disatisfaction_tt: "[br_concept_1de_estate] $br_basic_specifed_estate_disatisfaction_decrease_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_decrease_in_estate_disatisfaction_value')|-=]."
+ br_hre_medium_decrease_in_1de_estate_disatisfaction_tt: "[br_concept_1de_estate] $br_basic_specifed_estate_disatisfaction_decrease_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_decrease_in_estate_disatisfaction_value')|-=]."
+ br_hre_large_decrease_in_1de_estate_disatisfaction_tt: "[br_concept_1de_estate] $br_basic_specifed_estate_disatisfaction_decrease_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_decrease_in_estate_disatisfaction_value')|-=]."
+ br_hre_small_decrease_in_2de_estate_disatisfaction_tt: "[br_concept_2de_estate] $br_basic_specifed_estate_disatisfaction_decrease_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_decrease_in_estate_disatisfaction_value')|-=]."
+ br_hre_medium_decrease_in_2de_estate_disatisfaction_tt: "[br_concept_2de_estate] $br_basic_specifed_estate_disatisfaction_decrease_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_decrease_in_estate_disatisfaction_value')|-=]."
+ br_hre_large_decrease_in_2de_estate_disatisfaction_tt: "[br_concept_2de_estate] $br_basic_specifed_estate_disatisfaction_decrease_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_decrease_in_estate_disatisfaction_value')|-=]."
+ br_hre_small_decrease_in_3de_estate_disatisfaction_tt: "[br_concept_3de_estate] $br_basic_specifed_estate_disatisfaction_decrease_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_decrease_in_estate_disatisfaction_value')|-=]."
+ br_hre_medium_decrease_in_3de_estate_disatisfaction_tt: "[br_concept_3de_estate] $br_basic_specifed_estate_disatisfaction_decrease_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_decrease_in_estate_disatisfaction_value')|-=]."
+ br_hre_large_decrease_in_3de_estate_disatisfaction_tt: "[br_concept_3de_estate] $br_basic_specifed_estate_disatisfaction_decrease_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_decrease_in_estate_disatisfaction_value')|-=]."
+ br_hre_unspecified_decrease_in_1de_estate_disatisfaction_tt: "[br_concept_1de_estate] $br_basic_unspecifed_estate_disatisfaction_decrease_loc$: $br_disatisfaction_change_value$."
+ br_hre_unspecified_decrease_in_2de_estate_disatisfaction_tt: "[br_concept_2de_estate] $br_basic_unspecifed_estate_disatisfaction_decrease_loc$: $br_disatisfaction_change_value$."
+ br_hre_unspecified_decrease_in_3de_estate_disatisfaction_tt: "[br_concept_3de_estate] $br_basic_unspecifed_estate_disatisfaction_decrease_loc$: $br_disatisfaction_change_value$."
 
-
- ##Monarchy popularity
- br_will_increase_monthly_monarchy_popularity_tt: "This will increase the monthly monarchy popularity."
 
  ##Script value breakdowns
  br_revolution_from_statue_of_ruler_loc: "From having [GetStaticModifier('modifier_statue_of_ruler').GetName]"
@@ -110,15 +107,16 @@
  je_hre_impending_revolution: "The Revolution Looms"
  je_hre_impending_revolution_status: "We must address the current situation within the realm if we wish to prevent Revolution."
  je_hre_impending_revolution_reason: "The situation in the HRE has grown desperate and the people have had enough. If we don’t do anything then the situation could get out of control and our 1000 year government could be overthrown. We will have to consider carefully how to deal with the situation, do we reform the state or do we choose to suppress these so-called revolutionaries. In case we fail to do anything the consequences could be disastrous.\n$TOOLTIP_DELIMITER$\n@information! When the revolution progress reaches #variable 100%#! then the revolution will erupt. The revolution will be launched by the estate that has the highest disatisfaction. The disatisfaction of estates will change over time thru events and decisions you will take. $br_current_most_disatisfied_estate_loc$\n$TOOLTIP_DELIMITER$\n$br_monarchy_popularity_loc$"
- br_monarchy_popularity_loc: "Currently, the Emperor enjoys #bold #greece [ROOT.GetVariable('br_monarchy_popularity_var').GetValue]#!#! #bold Monarchy Popularity#!.\nThis is expected to change by #tooltippable;tooltip:[Country.GetTooltipTag],je_monarchy_popularity_main_breakdown [Country.MakeScope.ScriptValue('br_monarchy_popularity_change_value')|+=]#! next month."
+ br_monarchy_popularity_loc: "Currently, the Emperor enjoys $br_monarchy_popularity_current_value_loc$ [br_concept_monarchy_popularity].\nThis is expected to change by #tooltippable;tooltip:[Country.GetTooltipTag],je_monarchy_popularity_main_breakdown [Country.MakeScope.ScriptValue('br_monarchy_popularity_change_value')|+=]#! next month."
  je_monarchy_popularity_main_breakdown: "[Country.MakeScope.GetScriptValueDesc('br_monarchy_popularity_change_value')]\n$TOOLTIP_DELIMITER$\nMaximum value: [Country.MakeScope.ScriptValue('br_monarchy_popularity_max_value')|+=]\nMinimum value: [Country.MakeScope.ScriptValue('br_monarchy_popularity_min_value')|+=]"
  br_je_hre_impending_revolution_completion_header: "Will prevent #b Revolution#! if:\n"
  finished_revolution_tt: "We have dealt with the revolution in a manner of our choice."
  br_je_hre_impending_revolution_failure_header: "The #b Revolution#! will erupt if:\n"
  br_je_hre_impending_revolution_on_failure_header: "The #b Revolution#! erupts:"
  je_revolution_reform: "Revolution: Reform"
- je_revolution_reform_reason: "The time has come to reform the state in order to halt a revolution, to do this we will have reform our laws, get rid of [GetStaticModifier('br_modifier_noble_privileges').GetName], fix our #tooltippable;tooltip:[Country.GetTooltipTag],br_how_to_fix_unreliable_food_supply_loc [GetStaticModifier('br_modifier_unreliable_food_security').GetName]#!, modernize and popularize our regime."
+ je_revolution_reform_reason: "The time has come to reform the state in order to halt a revolution, to do this we will have reform our laws, get rid of [GetStaticModifier('br_modifier_noble_privileges').GetName], fix our #tooltippable;tooltip:[Country.GetTooltipTag],br_how_to_fix_unreliable_food_supply_loc [GetStaticModifier('br_modifier_unreliable_food_security').GetName]#!, modernize and #tooltippable;tooltip:[Country.GetTooltipTag],br_how_to_popularize_regime_loc popularize our regime#!."
  br_how_to_fix_unreliable_food_supply_loc: "To fix our unreliable food supply we have to make sure that at least [Country.MakeScope.ScriptValue('br_impending_revolution_min_food_security_population_percentage_threshold_for_stable_food_supply')|%0=+] of our population has a [concept_food_security] level of [Country.MakeScope.ScriptValue('br_impending_revolution_food_security_stablity_threshold')|%0=+]. Once this happens we will have stabilized our food supply."
+ br_how_to_popularize_regime_loc: "To popularize our regime we must make sure that the popularity of our monarch is at least [Country.MakeScope.ScriptValue('br_impending_revolution_monarchy_popularity_threshold_for_popular_regime')|+], currently our [br_concept_monarchy_popularity] is $br_monarchy_popularity_current_value_loc$"
  je_revolution_suppress: "Revolution: Suppress"
  je_revolution_suppress_reason: "We will not bow to the demands of the people, the state will remain as is."
  br_empty_string_loc: "" #this loc is an standard empty string
@@ -326,3 +324,12 @@
  br_impending_revolution_1de_estate_disatisfaction_revolution_progress_change_loc: "From the current $br_1de_estate_loc$ disatisfaction."
  br_impending_revolution_2de_estate_disatisfaction_revolution_progress_change_loc: "From the current $br_2de_estate_loc$ disatisfaction."
  br_impending_revolution_3de_estate_disatisfaction_revolution_progress_change_loc: "From the current $br_3de_estate_loc$ disatisfaction."
+
+ ##Monarchy Popularity
+ br_monarchy_popularity_current_value_loc: "#bold #greece [Country.MakeScope.GetVariable('br_monarchy_popularity_var').GetValue]#!#!" #using ROOT instead of Country.MakeScope will make the br_how_to_popularize_regime_loc tooltip cause the game to crash
+ #change in monarchy popularity
+ br_will_increase_monthly_monarchy_popularity_tt: "This will increase the monthly [br_concept_monarchy_popularity]."
+ br_will_decrease_monthly_monarchy_popularity_tt: "This will decrease the monthly [br_concept_monarchy_popularity]."
+ #monarchy popularity concept
+ br_concept_monarchy_popularity: "Monarchy Popularity"
+ br_concept_monarchy_popularity_desc: "This represents how popular the monarchy is among the people."
