added 2 new scripted buttons

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -91,7 +91,7 @@
  ##Script value breakdowns
  br_revolution_from_statue_of_ruler_loc: "From having [GetStaticModifier('modifier_statue_of_ruler').GetName]"
  br_revolution_from_antiquated_regime_loc: "From having [GetStaticModifier('br_modifier_antiquated_regime').GetName]"
- #temp grefm loc
+ #temp grefm loc (TODO remove later)
  grefm_value_from_voting: "From enacting #yellow Voting Rights#!"
  grefm_value_from_completed_legacies: "From completed #bold Ottoman Legacy#! [Concept('concept_journal_entry', '$concept_journal_entries$')]"
  grefm_value_from_turkeater_unleashed: "From #bold Releasing #greece Nikitaras#!#!"
@@ -151,11 +151,15 @@
  je_create_new_titles_to_appease_nobles_button_desc: "Create new titles so the Nobility is appeased."
  je_revoke_new_titles_given_to_nobles_button: "Revoke new titles given to nobles"
  je_revoke_new_titles_given_to_nobles_button_desc: "Revoke the new titles given to the Nobility."
+ je_investigate_noble_tax_evasion_button: "Investigate Noble tax evasion"
+ je_investigate_noble_tax_evasion_button_desc: "We must investigate the Nobility for tax evation."
  #2de estate buttons
  je_clamp_down_on_church_rights_button: "Clamp down on chruch rights"
  je_clamp_down_on_church_rights_button_desc: "The chruch is currently in a advantages position, because of special rights that are bestowed to them. It would benefit us if we were to revoke thes priviliges."
  je_reinstate_chruch_rights_button: "Reinstate chruch rights"
  je_reinstate_chruch_rights_button_desc: "We must reinstate the special priviliges of the church to curry favor with them."
+ je_require_oath_of_loyalty_from_priests_button: "Require oath of loyalty from priests"
+ je_require_oath_of_loyalty_from_priests_button_desc: "We must ensure that the Clergy is loyal to the Crown and not to Rome."
  #3de estate buttons
  je_appoint_bourgeois_ministers_button: "Apoint Bourgeois ministers"
  je_appoint_bourgeois_ministers_button_desc: "Apoint members of the bourgeoisie to the position of minister as to appease the $br_3de_estate_loc$."
