--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -1,5 +1,6 @@
 ﻿l_english:
 
+ #######################################################################################
  ##Scripted progressbars
  br_hre_impending_revolution_progress_bar: "Impending Revolution"
  br_hre_impending_revolution_progress_bar_desc: "As this increases the Revolution draws closer."
@@ -19,10 +20,29 @@
  br_impending_revolution_2de_estate_disatisfaction_revolution_progress_change_loc: "the current [br_concept_2de_estate] disatisfaction."
  br_impending_revolution_3de_estate_disatisfaction_revolution_progress_change_loc: "the current [br_concept_2de_estate] disatisfaction."
 
+ #Feudalism laws effect
  br_impending_revolution_has_feudalism_enforced_loc: "has enacted [GetLawType('br_law_feudalism_enforced').GetName]."
  br_impending_revolution_has_feudalism_codified_loc: "has enacted [GetLawType('br_law_feudalism_codified').GetName]."
  br_impending_revolution_has_feudalism_not_enforced_loc: "has enacted [GetLawType('br_law_feudalism_not_enforced').GetName]."
  br_impending_revolution_has_feudalism_affirmative_action_loc: "has enacted [GetLawType('br_law_feudalism_affirmative_action').GetName]."
+ #Voting laws effects
+ br_impending_revolution_has_a_law_that_allows_you_to_vote_loc: "has a law that allows you to vote."
+ #Bureaucracy laws effects
+ br_impending_revolution_has_hereditary_bureaucrats_loc: "has enacted [GetLawType('law_hereditary_bureaucrats').GetName]"
+ br_impending_revolution_has_appointed_bureaucrats_loc: "has enacted [GetLawType('law_appointed_bureaucrats').GetName]"
+ br_impending_revolution_has_elected_bureaucrats_loc: "has enacted [GetLawType('law_elected_bureaucrats').GetName]"
+ #Chruch and State laws effect
+ br_impending_revolution_has_state_religion_loc: "has enacted [GetLawType('law_state_religion').GetName]"
+ br_impending_revolution_has_freedom_of_conscience_loc: "has enacted [GetLawType('law_freedom_of_conscience').GetName]"
+ br_impending_revolution_has_total_separation_loc: "has enacted [GetLawType('law_total_separation').GetName]"
+ br_impending_revolution_has_state_atheism_loc: "has enacted [GetLawType('law_state_atheism').GetName]"
+ #Education laws effect
+ br_impending_revolution_has_no_schools_loc: "has enacted [GetLawType('law_no_schools').GetName]"
+ br_impending_revolution_has_religious_schools_loc: "has enacted [GetLawType('law_religious_schools').GetName]"
+ br_impending_revolution_has_private_schools_loc: "has enacted [GetLawType('law_private_schools').GetName]"
+ br_impending_revolution_has_public_schools_loc: "has enacted [GetLawType('law_public_schools').GetName]"
+
+ #######################################################################################
 
 
 #  #br_quantitative_indicator_loc
@@ -87,6 +107,7 @@
  br_hre_unspecified_decrease_in_2de_estate_disatisfaction_tt: "[br_concept_2de_estate] $br_basic_unspecifed_estate_disatisfaction_decrease_loc$: $br_disatisfaction_change_value$."
  br_hre_unspecified_decrease_in_3de_estate_disatisfaction_tt: "[br_concept_3de_estate] $br_basic_unspecifed_estate_disatisfaction_decrease_loc$: $br_disatisfaction_change_value$."
 
+ #######################################################################################
 
  ##Script value breakdowns
  br_revolution_from_statue_of_ruler_loc: "From having [GetStaticModifier('modifier_statue_of_ruler').GetName]"
@@ -105,6 +126,7 @@
  grefm_value_from_ruler_popularity: "From our [concept_ruler]'s [concept_popularity]"
  grefm_value_from_liberal_movements: "From #bold Pro-Voting#! [concept_political_movement] [concept_activism]"
 
+ #######################################################################################
 
  ##journal entries
  je_hre_impending_revolution: "The Revolution Looms"
@@ -126,6 +148,7 @@
  br_point_string_loc: "." #this loc is an standard point string
  br_comma_string_loc: "," #this loc is an standard comma string
 
+ #######################################################################################
 
  ##Scripted Buttons
  br_show_estate_actions_loc: "Show actions you can take towards the"
@@ -179,6 +202,7 @@
  je_begin_modernizing_the_regime_button: "Begin modernizing the Regime"
  je_begin_modernizing_the_regime_button_desc: "In order to reform the state we will first have to begin modernizing the current regime."
 
+ #######################################################################################
 
  ##Events
  #A Revolution looms
@@ -275,6 +299,8 @@
  hre_revolution_events.502.f: "Due to the popularity of our monarch our regime is no longer considered unpopular."
  hre_revolution_events.502.a: "Great"
 
+ #######################################################################################
+
  ##Modifiers
  br_modifier_unreliable_food_security: "Unreliable Food Security"
  br_modifier_unpopular_regime: "Unpopular Regime"
@@ -286,17 +312,23 @@
  br_modifier_subsidize_food_distribution: "Subsidize food distribution"
  br_modifier_new_noble_titles: "New Noble titles"
 
+ #######################################################################################
+
  # political movements
  br_movement_anti_feudalism: "Anti Feudalism Movement"
  br_movement_anti_feudalism_name: "$br_movement_anti_feudalism$"
  br_movement_pro_feudalism: "Pro Feudalism Movement"
  br_movement_pro_feudalism_name: "$br_movement_pro_feudalism$"
 
+ #######################################################################################
+
  # ideologies
  ideology_anti_feudalism: "Anti Feudalism"
  ideology_anti_feudalism_desc: "This character opposes the ideas of Feudalism."
  ideology_pro_feudalism: "Pro Feudalism"
  ideology_pro_feudalism_desc: "This character believes ones worth and standing in society is derived from birth."
+
+ #######################################################################################
 
  #Imperial Residence
  br_imperial_residence_building_loc: "[GetPlayer.MakeScope.GetVariable( 'br_current_imperial_residence_var' ).GetBuilding.GetName]"
@@ -305,7 +337,9 @@
  br_concept_imperial_residence:0 "Royal Residence"
  br_concept_imperial_residence_desc:1 "The $br_concept_imperial_residence$ is the location wheir the Imperial families lives[GetPlayer.GetCustom('br_imperial_residence_location_loc')]"
  br_concept_imperial_residence_location: ", which is currently $br_imperial_residence_building_loc$."
-#tooltip:tooltip_tag,tooltip_body,cooltip your text here#!
+ #tooltip:tooltip_tag,tooltip_body,cooltip your text here#!
+
+ #######################################################################################
 
  ##Estates
  #estate names
@@ -328,6 +362,8 @@
  br_current_most_disatisfied_estate_loc: "Currently the estate with the highest disatisfaction is the #yellow [GetPlayer.GetCustom('br_estate_with_the_highest_disatisfaction_loc')]#! with $br_estate_with_the_highest_disatisfaction_value_loc$ disatisfaction."
  br_estate_with_the_highest_disatisfaction_value_loc: "[ROOT.GetVariable('br_estate_with_highest_disatisfaction_var').GetVariable('br_estate_disatisfaction_var').GetValue|+-]"
  br_1de_estate_disatisfaction_loc: "[ROOT.GetVariable('br_1de_estate_var').GetVariable('br_estate_disatisfaction_var').GetValue|+-]"
+
+ #######################################################################################
 
  ##Monarchy Popularity
  br_monarchy_popularity_current_value_loc: "#bold #greece [Country.MakeScope.GetVariable('br_monarchy_popularity_var').GetValue]#!#!" #using ROOT instead of Country.MakeScope will make the br_how_to_popularize_regime_loc tooltip cause the game to crash
