--- a/localization/english/replace/country_flavor_text_l_english.yml
+++ b/localization/english/replace/country_flavor_text_l_english.yml
@@ -35,26 +35,27 @@
    VEN_FLAVOR_TEXT: "With an expansive network of trade posts stretching from Atlanteum in the West to Kherson in the East, the trade flows to their shores with ease. The balance of Northern Italy shifts though, with a storm brewing between the big three powers; Genoa, Milan, and Venice. Will the Doge be able to navigate Venice through these turbulent times into a second golden age or plunge it into the swamps the city sits on?"
    LOM_FLAVOR_TEXT: "As the wealthiest of the Northern Italian states, Milan sits in a strong position wedged between hostile merchant republics and the Frankish kingdoms. A wave of liberalism has resulted in the expansion of voting rights and protection of assemblies. The people yearn for more, but King Aurelio faces a slipperly slope. If he gives too much, his son may rule over nothing more than an empty house."
    br_genoa_FLAVOR_TEXT: "Genoa's trading empire stretches the globe, with colonies giving the nation access to the worlds markets. No amount of Chinese porcelin or Giamaican tobbacco could pay off their numerous enemies. Milan and Savoy bear down on their heartlands, while Florence eyes Pisa. Can Genoa keep business as usual? Or is their downfall nothing personal?"
-   SAR_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   SAR_FLAVOR_TEXT: "$GENERIC_HRE_SUBJECT_FLAVOR_TEXT$"
   
   # Germans
-   BAV_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   BAV_FLAVOR_TEXT: "$GENERIC_HRE_SUBJECT_FLAVOR_TEXT$"
    SAX_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    POM_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   HES_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   BAD_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   WUR_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   HES_FLAVOR_TEXT: "$GENERIC_HRE_SUBJECT_FLAVOR_TEXT$"
+   BAD_FLAVOR_TEXT: "$GENERIC_HRE_SUBJECT_FLAVOR_TEXT$"
+   WUR_FLAVOR_TEXT: "$GENERIC_HRE_SUBJECT_FLAVOR_TEXT$"
    br_silesia_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    MEI_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    
   # Western Europe
    NET_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    HRE_FLAVOR_TEXT: "With Emperor Louis-Philippe rising to the throne, the HRE faces a new wave of centralization. It's subjects however have different ideas, seeking to gain more privliages or break free entirely. Externally the Kings of Iberia cry for help in their fight against Al-Andalus and the enemies of Christendom. Will the HRE be able to centralize and claim further glory? Or will the enemies from within prove to be too powerful?"
-   FLA_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   BRG_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   OCC_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   BRI_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   br_provence_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   GENERIC_HRE_SUBJECT_FLAVOR_TEXT: "This nation is a subject within the HRE. Will they retain there autonomy within the empire, will they absorbed by Paris or will they simply burn all bridges with the empire and go their own route?"
+   FLA_FLAVOR_TEXT: "Formed when the dutchies of Vlaanderen en Brabant united, $FLA$ is the wealthiest and richest of HRE subjects, however it has had a difficult last 2 centuries, with first economic stagnation and then the loss of the Northern Lowlands when they declared their independence. Will $FLA$ be able to modernize and reconquer there lost lands or will they simple swallowed by a increasing centralizing HRE?"
+   BRG_FLAVOR_TEXT: "$GENERIC_HRE_SUBJECT_FLAVOR_TEXT$"
+   OCC_FLAVOR_TEXT: "$GENERIC_HRE_SUBJECT_FLAVOR_TEXT$"
+   BRI_FLAVOR_TEXT: "$GENERIC_HRE_SUBJECT_FLAVOR_TEXT$"
+   br_provence_FLAVOR_TEXT: "$GENERIC_HRE_SUBJECT_FLAVOR_TEXT$"
    
   # British Isles
    IRE_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
