--- a/localization/english/replace/countries_l_english.yml
+++ b/localization/english/replace/countries_l_english.yml
@@ -162,7 +162,7 @@
  MAL_ADJ: "Malian"
  OCC: "Aquitaine"
  OCC_ADJ: "Aquitaine"
- SYR: "Emirate of Damascus"
+ SYR: "Damascus"
  SYR_ADJ: "Damascus"
  LEB: "Lebanon"
  LEB_ADJ: "Lebanese"
@@ -184,12 +184,12 @@
  MNG_ADJ: "Mirning"
  NNV: "Inuit Nunaat"
  ATB: "Yedát’įįh Dene"
- MAD: "Mpanjakan’i Madagasikara"
+ MAD: "Madagasikara" #Mpanjakan’i Madagasikara
 
- GNI: "Ava Guaraní"
- TPI: "Abaé Tupinambá"
- PAT: "Mapuche Ñi Lof"
- AMZ: "Tribes of the Amazon"
+ GNI: "Guaraní" #Ava Guaraní
+ TPI: "Tupinambá" #Abaé Tupinambá
+ PAT: "Mapuche" #Mapuche Ñi Lof
+ #AMZ: "Tribes of the Amazon" #Tribes of the Amazon
  
   # Dynamic countries
  dyn_c_sicily: "Katepaníkion Italías"
@@ -205,7 +205,7 @@
  dyn_c_oceti_sakowin: "Oceti Sakowin"
  dyn_c_oceti_sakowin_adj: "Oceti Sakowin"
 
- dyn_c_empire_of_china: "Ming Empire"
+ dyn_c_empire_of_china: "Ming"
  dyn_c_empire_of_china_adj: "Ming"
 
  dyn_c_hre_republic: "Western Roman Republic"
