updated monarchy popularity script value

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -112,6 +112,7 @@
  ##Script value breakdowns
  br_revolution_from_statue_of_ruler_loc: "From having [GetStaticModifier('modifier_statue_of_ruler').GetName]"
  br_revolution_from_antiquated_regime_loc: "From having [GetStaticModifier('br_modifier_antiquated_regime').GetName]"
+ br_revolution_from_bourgeois_ministers_loc: "From having [GetStaticModifier('br_modifier_bourgeois_ministers').GetName]"
  #temp grefm loc (TODO remove later)
  grefm_value_from_voting: "From enacting #yellow Voting Rights#!"
  grefm_value_from_completed_legacies: "From completed #bold Ottoman Legacy#! [Concept('concept_journal_entry', '$concept_journal_entries$')]"
