updated ERE objective

--- a/localization/english/replace/country_flavor_text_l_english.yml
+++ b/localization/english/replace/country_flavor_text_l_english.yml
@@ -155,6 +155,8 @@
    PER_FLAVOR_TEXT: "At the center of the Silk Road Persia has grown wealthy beyond measure from the goods that follow to Europe and beyond. But all is not well, the trade is threatened by jealous powers like Tartaria and the Mughal Empire. Along with the threat from Arabia, can Persia maintain it's position as a Great Power or be swallowed by the mountains?"
    ARA_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    br_aegypt_FLAVOR_TEXT: "The breadbasket of Africa, Aigyptios expands it's holdings East into Asia in an attempt to gain a leg up in the struggle against the Basileía Romaíon. Will the land of ancient empires stand free, or be forced to kneel to their new Basileus?"
+   ARM_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   GEO_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    
   # North America
    br_elysium_FLAVOR_TEXT: "Since it's independence, Elysium has been a shining beacon of opportunity by the Romaíoi world. With the influx of skilled laborers their borders expand East, causing conflict with other colonies. Can Elysium be economic powerhouse of the Americas or will they be divided and conquered by the Western colonial overlords?"
