added a new button
added a button to reduce the taxes of peasants

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -20,6 +20,9 @@
  br_impending_revolution_2de_estate_disatisfaction_revolution_progress_change_loc: "the current [br_concept_2de_estate] disatisfaction."
  br_impending_revolution_3de_estate_disatisfaction_revolution_progress_change_loc: "the current [br_concept_2de_estate] disatisfaction."
 
+ #Having modifiers effecs
+ br_impending_revolution_has_reduced_land_taxes_loc: "has [GetStaticModifier('br_modifier_reduced_land_taxes').GetName]."
+
  #Feudalism laws effect
  br_impending_revolution_has_feudalism_enforced_loc: "has enacted [GetLawType('br_law_feudalism_enforced').GetName]."
  br_impending_revolution_has_feudalism_codified_loc: "has enacted [GetLawType('br_law_feudalism_codified').GetName]."
@@ -193,6 +196,10 @@
  je_subsidize_food_distribution_button_desc: "Start subsidizing food distributions to lessen the current food shortages."
  je_desubsidize_food_distribution_button: "Desubsidize food distribution"
  je_desubsidize_food_distribution_button_desc: "Stop subsidizing food distributions."
+ je_reduce_taxes_for_the_peasantry_button: "Reduce taxes for the peasantry"
+ je_reduce_taxes_for_the_peasantry_button_desc: "Reduce the taxes for the peasantry, this will definitely appease the [br_concept_3de_estate]."
+ je_revoke_reduced_taxes_for_the_peasantry_button: "Revoke reduced taxes for the peasantry"
+ je_revoke_reduced_taxes_for_the_peasantry_button_desc: "Revoke the reduced taxes for the peasantry, this will definitely upset the [br_concept_3de_estate]."
  #Monarchy buttons
  je_move_imperial_residence_button: "Move the [br_concept_imperial_residence]"
  je_move_imperial_residence_button_desc: "Move the [br_concept_imperial_residence] to [GetBuildingType('br_building_versailles').GetName]"
@@ -312,6 +319,7 @@
  br_modifier_bourgeois_ministers: "Bourgeois Ministers"
  br_modifier_subsidize_food_distribution: "Subsidize food distribution"
  br_modifier_new_noble_titles: "New Noble titles"
+ br_modifier_reduced_land_taxes: "Reduced land taxes"
 
  #######################################################################################
 
