percentage of loyalist or radicals now affect estate dissatisfaction

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -13,15 +13,15 @@
  br_hre_impending_revolution_3de_estate_progress_bar: "[br_concept_3de_estate] disatisfaction"
  br_hre_impending_revolution_3de_estate_progress_bar_desc: "[br_concept_3de_estate] disatisfaction"
 
- br_impending_revolution_to_many_redicals_loc: "more than #variable [GetPlayer.MakeScope.ScriptValue('br_impending_revolution_radicals_threshold_percentage')]%#! of the population are radicals."
- br_impending_revolution_to_many_loyalists_loc: "more than #variable [GetPlayer.MakeScope.ScriptValue('br_impending_revolution_loyalist_threshold_percentage')]%#! of the population are loyalists."
+ br_impending_revolution_to_many_loyalists_loc: "more than #variable [GetPlayer.MakeScope.ScriptValue('br_impending_revolution_loyalist_percentage_as_integer')]%#! of the population are [concept_loyalist]."
+ br_impending_revolution_to_many_radicals_loc: "more than #variable [GetPlayer.MakeScope.ScriptValue('br_impending_revolution_radicals_percentage_as_integer')]%#! of the population are [concept_radical]."
  br_impending_revolution_monarchy_popularity_revolution_progress_change_loc: "the current Monarchy popularity."
  br_impending_revolution_1de_estate_disatisfaction_revolution_progress_change_loc: "the current [br_concept_1de_estate] disatisfaction."
  br_impending_revolution_2de_estate_disatisfaction_revolution_progress_change_loc: "the current [br_concept_2de_estate] disatisfaction."
  br_impending_revolution_3de_estate_disatisfaction_revolution_progress_change_loc: "the current [br_concept_2de_estate] disatisfaction."
 
  #Having modifiers effecs
- br_impending_revolution_has_reduced_land_taxes_loc: "has [GetStaticModifier('br_modifier_reduced_land_taxes').GetName]."
+ br_impending_revolution_has_reduced_land_taxes_loc: "has [GetStaticModifier('br_modifier_reduced_land_taxes').GetName|v]."
 
  #Feudalism laws effect
  br_impending_revolution_has_feudalism_enforced_loc: "has enacted [GetLawType('br_law_feudalism_enforced').GetName]."
