added new modifier types to indicate whether or not a modifier will change the estate dissatisfaction
-added new modifier types to indicate whether or not a modifier will change the monthly estate dissatisfaction

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -323,6 +323,19 @@
 
  #######################################################################################
 
+ ##Modifier Types
+ br_modifier_will_increase_monthly_disatisfaction_loc: "This modifier will increase the disatisfaction of the"
+ br_modifier_will_decrease_monthly_disatisfaction_loc: "This modifier will decrease the disatisfaction of the"
+ br_every_month: "every month"
+ country_will_add_1de_estate_monthly_disatisfaction_increase: "$br_modifier_will_increase_monthly_disatisfaction_loc$ [br_concept_1de_estate] $br_every_month$"
+ country_will_add_1de_estate_monthly_disatisfaction_decrease: "$br_modifier_will_decrease_monthly_disatisfaction_loc$ [br_concept_1de_estate] $br_every_month$"
+ country_will_add_2de_estate_monthly_disatisfaction_increase: "$br_modifier_will_increase_monthly_disatisfaction_loc$ [br_concept_2de_estate] $br_every_month$"
+ country_will_add_2de_estate_monthly_disatisfaction_decrease: "$br_modifier_will_decrease_monthly_disatisfaction_loc$ [br_concept_2de_estate] $br_every_month$"
+ country_will_add_3de_estate_monthly_disatisfaction_increase: "$br_modifier_will_increase_monthly_disatisfaction_loc$ [br_concept_3de_estate] $br_every_month$"
+ country_will_add_3de_estate_monthly_disatisfaction_decrease: "$br_modifier_will_decrease_monthly_disatisfaction_loc$ [br_concept_3de_estate] $br_every_month$"
+
+ #######################################################################################
+
  # political movements
  br_movement_anti_feudalism: "Anti Feudalism Movement"
  br_movement_anti_feudalism_name: "$br_movement_anti_feudalism$"
