More modifiers now affect estate dissatisfaction

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -21,7 +21,10 @@
  br_impending_revolution_3de_estate_disatisfaction_revolution_progress_change_loc: "the current [br_concept_3de_estate] disatisfaction."
 
  #Having modifiers effecs
+ br_impending_revolution_has_special_chruch_rights_loc: "has [GetStaticModifier('br_modifier_special_chruch_rights').GetName|v]."
+ br_impending_revolution_has_new_noble_titles_loc: "has [GetStaticModifier('br_modifier_new_noble_titles').GetName|v]."
  br_impending_revolution_has_reduced_land_taxes_loc: "has [GetStaticModifier('br_modifier_reduced_land_taxes').GetName|v]."
+ br_impending_revolution_has_subsidize_food_distribution_loc: "has [GetStaticModifier('subsidize_food_distribution').GetName|v]."
 
  #Feudalism laws effect
  br_impending_revolution_has_feudalism_enforced_loc: "has enacted [GetLawType('br_law_feudalism_enforced').GetName]."
